--- a/css/styles.css
+++ b/css/styles.css
@@ -110,12 +110,7 @@ a:hover {
 .bg-gray {
 	background-color: #f7f9fb;
 }
-.contenedor {
-	background-color: #031426;
-}
-.color-text{
-	color: #ffffff;
-}
+
 .section-divider {
 	display: block;
 	height: 1px;
@@ -180,7 +175,7 @@ a:hover {
 	color: #ffffff;
 	text-decoration: none;
 }
-
+.form-control-input
 .btn-outline-lg {
 	display: inline-block;
 	padding: 1.625rem 2.625rem 1.625rem 2.625rem;
@@ -251,7 +246,7 @@ a:hover {
 .form-control-select {
 	display: block; /* needed for proper display of the label in Firefox, IE, Edge */
 	width: 100%;
-	padding-top: 1.125rem;
+	padding-top: 1.75rem;
 	padding-bottom: 0.125rem;
 	padding-left: 1.5rem;
 	border: 1px solid #cbcbd1;
@@ -278,7 +273,7 @@ select {
 	-ms-appearance: none;
     -o-appearance: none;
     appearance: none;
-    background-image: url('../img/down-arrow.png');
+    background-image: url('../images/down-arrow.png');
     background-position: 96% 50%;
     background-repeat: no-repeat;
     outline: none;
@@ -328,8 +323,8 @@ input[type='checkbox'] {
 	width: 100%;
 	height: 3.25rem;
 	border-radius: 32px;
-	background-color: #ffffff;
-	color: #031426;
+	background-color: #031426;
+	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
 	line-height: 0;
@@ -825,6 +820,7 @@ nav.navbar{
 
 }
 
+
 /******************/
 /*     Footer     */
 /******************/
@@ -897,13 +893,13 @@ a.back-to-top {
 	width: 42px;
 	height: 42px;
 	border-radius: 30px;
-	background: #264A71 url("../img/up-arrow.png") no-repeat center 47%;
+	background: #3a424d url("../images/up-arrow.png") no-repeat center 47%;
 	background-size: 18px 18px;
 	text-indent: -9999px;
 }
 
 a:hover.back-to-top {
-	background-color: #3a424d;
+	background-color: #553C7B;
 }
 
 
